<resources>
    <string name="app_name" translatable="false">Controle</string>
    <string name="app_name_restrito">..:: Acesso Restrito ::..</string>
    <string name="app_name_fornecedor">..:: Fornecedor ::..</string>
    <string name="app_name_sistema">..:: Bem vindo ao Sistema ::..</string>
    <string name="dummy_button" translatable="false">...:: Click para Entrar ::...</string>
    <string name="dummy_content" translatable="false">SISTEMA APP\n\nCONTROLE\n\nDOS\nITENS ESTOQUE</string>
    <string name="textView">Resultado da Busca no Bando de Dados!</string>
    <string name="nav_sair" translatable="false">Sair</string>
    <string name="txtEmail">..:: Digite o E-mail ::..</string>
    <string name="imgLogo">Logo Marca</string>
    <string name="txtPassWord">..:: Digite a Senha ::..</string>
    <string name="txtemail">E-mail:</string>
    <string name="txtpassword">Senha:</string>
    <string name="btnLogar">logar</string>
    <string name="txtBemVindo">Seja bem vindo Fornecedor!</string>
    <string name="txtInformacao">Aqui você vai efetuar a seleção de um Item por vez! No qual sua empresa é fornecedora.</string>
    <string name="txtResultadoConsulta">Consulta ao Sql</string>
    <string name="btnPreco">Preço</string>
    <string name="txtResulEmail">Resultado da consulta ao E-mail.</string>
    <string name="USENAMEold">t@t.gmail.com</string>
    <string name="PASSAWORD_old">123</string>
    <string name="txtResultIF_ELSE">Result</string>
    <string name="resultPASS">PASS</string>
    <string name="ResulttextView">TextView</string>
    <string name="email_archived">Quase no Sistema ::..</string>
    <string name="undo_string">..:: Basta fazer o Login</string>
    <string name="button">Buscar</string>
    <string name="textView2">Caso tiver Erro de Sql, tera resposta aqui</string>
</resources>