<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50sp"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="visible"
                        app:cardBackgroundColor="#C5F3C7"
                        app:cardCornerRadius="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imgLogo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:contentDescription="@string/imgLogo"
                                app:srcCompat="@drawable/logo7" />

                            <TextView
                                android:id="@+id/txtResulEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txtEmail" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/txtInputEmail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/txtInpEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_email_24"
                                    android:drawableLeft="@drawable/ic_baseline_email_24"
                                    android:hint="@string/txtemail"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>

                            <TextView
                                android:id="@+id/txtPassWord"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txtPassWord" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/txtInputPassWord"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity=""
                                app:passwordToggleEnabled="true">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/txtInpPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_lock_24"
                                    android:drawableLeft="@drawable/ic_lock_24"
                                    android:hint="@string/txtpassword"
                                    android:password="true"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>

                            <Button
                                android:id="@+id/btnLogar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#E65757"
                                android:drawableStart="@drawable/ic_baseline_send_24"
                                android:drawableLeft="@drawable/ic_baseline_send_24"
                                android:drawableEnd="@drawable/ic_login"
                                android:drawableRight="@drawable/ic_login"
                                android:text="@string/btnLogar"
                                android:textColor="#FFFFFF" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#EFE1E1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView2" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>